Fix for Issue #14451 (2): *Always* set z-index for AC element and its pending indicator to 12000.
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@11569 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/SMWHalo/skins/Autocompletion/wick.css
+++ b/extensions/SMWHalo/skins/Autocompletion/wick.css
@@ -16,14 +16,14 @@ Modified by Ontoprise GmbH 2007 (KK)
 
 .pendingElement {
 position:fixed;
-z-index:100;
+z-index:12000;
 top:0px;
 left:0px;
 display:none;
 }
 .floater {
 position:absolute;
-z-index:100;
+z-index:12000;
 top:0px;
 /*left:0px;*/
 display:none;
